// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Spinner Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO czzHJd sc-hHopXc DRrMe sc-cbuKwb eiNSJQ"
    >
      <div
        class="sc-ljIeUD cIXua-d"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO czzHJd sc-hHopXc bXBTrm sc-cbuKwb eiNSJQ"
    >
      <div
        class="sc-ljIeUD dXobzD"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-jlJPwo cnTyAu sc-cbuKwb eiNSJQ"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc sc-dTCErJ gVVCNS kTjcFj"
      >
        <div
          class="sc-gKkhHZ cxMPyI sc-iCEByO czzHJd sc-hHopXc DRrMe"
        >
          <div
            class="sc-ljIeUD cIXua-d"
          />
          <div
            class="sc-fKwCjr fXUfSH sc-bCgmGQ EaAsW"
          >
            Spinning...
          </div>
        </div>
      </div>
      <div
        class="sc-htBVAG dWVPqE"
      >
        <div
          class="sc-gKkhHZ cxMPyI sc-iCEByO cbepGZ"
          style="background-color: rgb(248, 249, 253);"
        >
          Spinning, the wrapped children are made opaque
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Component Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO czzHJd sc-hHopXc DRrMe sc-cbuKwb eiNSJQ"
    >
      <div
        class="sc-ljIeUD cIXua-d"
      />
      <div
        class="sc-fKwCjr fXUfSH sc-bCgmGQ EaAsW"
      >
        <div
          class="sc-fKwCjr fXUfSH sc-bCgmGQ cNUeIG"
        >
          Building image 
          <button
            class="StyledButton-sc-323bzc-0 dDXISN sc-bqqNGx sc-bjLpWZ fLtAMU fslEki sc-dILjMz hHsOxK"
            type="button"
          >
            12345
          </button>
          ...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Spinner With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO czzHJd sc-hHopXc DRrMe sc-cbuKwb eiNSJQ"
    >
      <div
        class="sc-ljIeUD cIXua-d"
      />
      <div
        class="sc-fKwCjr fXUfSH sc-bCgmGQ EaAsW"
      >
        Spinning...
      </div>
    </div>
  </div>
</div>
`;
